--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Basil_4605
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Collins, Wilkie
@@ -12,6 +15,8 @@ creator:
 description: Title; Contents; Part I; I; II; III; IV; V; VI; VII; VIII; IX; X; XI;
   XII; Part II; I; II; III; IV; V; VI; VII; Part III; I; II; III; IV; V; VI; VII;
   VIII; Journal; Letters in Conclusion; Endnotes;
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/4605#Basil
 gutenberg_issued: '2003-11-01'
 gutenberg_type: Text
 identifiers:
